<resources>
    <string name="app_name">Cadastro Aluno</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_cadastro">Cadastro de novos Alunos</string>

    <string name="nome_aluno">Nome</string>
    <string name="rgm_aluno">Rgm</string>
    <string name="telefone">Telefone</string>
    <string name="cep">Cep</string>
    <string name="endereço">Endereço</string>
    <string name="email">E-Mail</string>
    <string name="curso_matricula">Curso</string>

    <string name="aluno_fill">Nome Aluno</string>
    <string name="rgm_fill">0000-0</string>
    <string name="telefone_fill">1190000-0000</string>
    <string name="cep_fill">00000-000</string>
    <string name="endereço_fill">Endereço</string>
    <string name="email_fill">E-Mail</string>

    <string name="add_aluno">Adicionar Aluno</string>
    <string name="add_disciplina">Adicionar Disciplina</string>
    <string name="title_activity_cadastro_aluno">CadastroAluno</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>