<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.CadastroAluno">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/title_cadastro"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/simples_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblAluno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/nome_aluno"
                android:textSize="@dimen/lbl_basic_size" />

            <EditText
                android:id="@+id/inputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/aluno_fill"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="@dimen/lbl_basic_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/simples_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRgm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/rgm_aluno"
                android:textSize="@dimen/lbl_basic_size" />

            <EditText
                android:id="@+id/inputRgm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/rgm_fill"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/lbl_basic_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/simples_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblCep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/cep"
                android:textSize="@dimen/lbl_basic_size" />

            <EditText
                android:id="@+id/inputCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/cep_fill"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/lbl_basic_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/simples_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/endereço"
                android:textSize="@dimen/lbl_basic_size" />

            <EditText
                android:id="@+id/inputEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/endereço_fill"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/lbl_basic_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/simples_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/telefone"
                android:textSize="@dimen/lbl_basic_size" />

            <EditText
                android:id="@+id/inputTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/telefone_fill"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textSize="@dimen/lbl_basic_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/simples_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="@dimen/lbl_basic_size" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/email_fill"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/lbl_basic_size" />

            <TextView
                android:id="@+id/lblCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="Curso"
                android:textSize="@dimen/lbl_basic_size" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#8BC34A"
                android:onClick="salvarAlunoDao"
                android:text="Salvar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#F44336"
                android:onClick="cancelar"
                android:text="Cancelar" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>







