<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InfoAluno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="Info Aluno"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Curso"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblCursoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nome_aluno"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblNomeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/rgm_aluno"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblRgmInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/cep"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblCepInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/endereço"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblEnderecoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/telefone"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTelefoneInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblEmailInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="null"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="voltar"
            app:srcCompat="@drawable/cancel_simple_80" />
    </LinearLayout>
</ScrollView>